<resources>
    <string name="app_name" translatable="false">Easy Interest</string>
    <string name="start_capital">Capital initial</string>
    <string name="savings">Epargne</string>
    <string name="monthly">Mensuelle</string>
    <string name="yearly">Annuelle</string>
    <string name="annual_growth">Croissance annuelle %</string>
    <string name="nb_of_years">Nombre d\'années</string>
    <string name="final_capital">Capital final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="compound_interest">Intérêts composés</string>
    <string name="loan_amount">Montant du prêt</string>
    <string name="interest_rate">Taux d\'intérêt %</string>
    <string name="monthly_payment">Montant des mensualités</string>
    <string name="new_monthly_payment">Nouveau montant des mensualités</string>
    <string name="credit_cost">Coût du crédit</string>
    <string name="property_loan">Crédit immobilier</string>
    <string name="loan_prepayment">Remboursement anticipé</string>
    <string name="loan_repurchase">Rachat de crédit</string>
    <string name="remaining_capital">Capital restant dû</string>
    <string name="remaining_months_before_prepayment">Nombre de mois restants</string>
    <string name="remaining_months_after_prepayment">Nouveau nombre de mois restants</string>
    <string name="remaining_months_before_repurchase">Nombre de mois restants</string>
    <string name="remaining_months_after_repurchase">Nouveau nombre de mois restants</string>
    <string name="prepayment_amount">Montant du remboursement</string>
    <string name="gain">Soit un gain de :</string>
    <string name="initial_interest_rate">Taux d\'intérêt initial %</string>
    <string name="new_interest_rate">Nouveau taux d\'intérêt %</string>
    <string name="save">Sauvegarder</string>
    <string name="history">Historique</string>
    <string name="support">Support</string>
    <string name="languages">Langues</string>
    <string name="share">Partager l\'application</string>
    <string name="rate_app">Noter l\'application</string>
    <string name="email_us">Nous contacter</string>
    <string name="share_this_app">Essayez la calculatrice financière Easy Interest :\nhttp://play.google.com/store/apps/details?id=fr.cromod.easyinterest</string>
    <string name="share_to">Partager avec</string>
    <string name="app_email" translatable="false">app.cromod@gmail.com</string>
    <string name="mail_to">Envoyer un mail à</string>
    <string name="french" translatable="false">Français</string>
    <string name="english" translatable="false">English</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="choose_language">Choisissez une langue:</string>
    <string name="chart">graphique</string>
</resources>
